--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,8 @@
      <div class="uk-animation-toggle">
               <div id="item_header" class="uk-card uk-card-default uk-card-body uk-animation-slide-left" > List of items: Muffin, Cakes, Cookies </div>
      </div>
-    <div class="row image_container">
-    <div class="col-md-9 image_div">
+    <div class="row image_container padding_box">
+    <div class="col-md-9 ">
 
     <center>
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
