--- a/public/style.css
+++ b/public/style.css
@@ -29,6 +29,11 @@ section {
 
 /*  HEADINGS */
 
+.image_container {
+  width: 1000px;
+  height: 450px;
+}
+
 #item_header {
   text-transform: uppercase;
   font-size: 55px;
@@ -291,6 +296,10 @@ header {
   display: flex;
   flex-wrap: wrap;
   padding: 0 0px;
+}
+
+.padding_box {
+  padding-left: 15%;
 }
 
 /* Create four equal columns that sits next to each other */
