--- a/views/sign.erb
+++ b/views/sign.erb
@@ -1,4 +1,4 @@
-<div id="item_header" class="wobble"> Sing Up </div>
+<div id="item_header" class="wobble"> Sign Up </div>
   <div class="form_width" >
     <form action="/email" method='post'>
         <div class="form-row">
