--- a/views/cakes.erb
+++ b/views/cakes.erb
@@ -1,10 +1,12 @@
 
+<!-- Indentation looks good here! -->
 <div id="item_header" class="uk-card uk-card-default uk-card-body uk-animation-slide-left"> Cakes </div>
 <div class="row">
   <div class="column">
     <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
       <div class="mainflip">
         <div class="frontside">
+          <!-- Do not put styles inline like this. -->
           <div class="card" style="width:25rem;  height:30rem;">
             <img class="card-img-top img- fluid" src="/img/cakes/strawberry_cake.jpg" alt="card image">
             <div class="card-body">
@@ -14,6 +16,7 @@
           </div>
         </div>
         <div class="backside">
+          <!-- Do not put styles inline like this. -->
           <div class="card" style="width:25rem;  height:30rem;">
               <div class="card-header">
                 <h4 class="card-title">         <%= @strawberry_cake.price %> </h4>
@@ -33,6 +36,7 @@
     <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
       <div class="mainflip">
         <div class="frontside">
+          <!-- Do not put styles inline like this. -->
           <div class="card" style="width:25rem;  height:30rem;">
             <img class="card-img-top img- fluid" src="/img/cakes/vanilla_cakes.jpg" alt="card image">
               <div class="card-body">
@@ -42,6 +46,7 @@
             </div>
           </div>
           <div class="backside">
+            <!-- Do not put styles inline like this. -->
             <div class="card" style="width:25rem;  height:30rem;">
                 <div class="card-header">
                   <h4 class="card-title">         <%= @vanilla_cake.price %> </h4>
@@ -62,6 +67,7 @@
     <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
       <div class="mainflip">
         <div class="frontside">
+          <!-- Do not put styles inline like this. -->
           <div class="card" style="width:25rem;  height:30rem;">
             <img class="card-img-top img- fluid" src="/img/cakes/chocolate_cake.jpg" alt="card image">
               <div class="card-body">
@@ -71,6 +77,7 @@
            </div>
          </div>
          <div class="backside">
+          <!-- Do not put styles inline like this. -->
            <div class="card" style="width:25rem;  height:30rem;">
              <div class="card-header">
                 <h4 class="card-title">         <%= @chocolate_cake.price %> </h4>
