--- a/views/cookies.erb
+++ b/views/cookies.erb
@@ -1,10 +1,12 @@
 
+<!-- Why is this indentation so bad badru??? -->
 <div id="item_header" class="wobble"> Cookies </div>
             <div class="row">
                 <div class="column">
                         <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
                               <div class="mainflip">
                                   <div class="frontside">
+                                      <!-- Do not put styles inline like this. -->
                                       <div class="card" style="width:25rem; height:30rem">
                                         <img class="card-img-top img- fluid" src="/img/cookies/Peanut_butter.jpg" alt="card image">
                                         <div class="card-body">
@@ -34,6 +36,7 @@
                     <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
                     <div class="mainflip">
                     <div class="frontside">
+                            <!-- Do not put styles inline like this. -->
                             <div class="card" style="width:25rem; height:30rem">
                                   <img class="card-img-top img- fluid" src="/img/cookies/Oatmeal_cookies.jpg" alt="card image">
                                   <div class="card-body">
@@ -43,6 +46,7 @@
                             </div>
                      </div>
                      <div class="backside">
+                                <!-- Do not put styles inline like this. -->
                                 <div class="card" style="width:25rem;  height:30rem">
                                       <div class="card-header">
                                               <h4 class="card-title">         <%= @oatmeal_raisin.price %> </h4>
@@ -62,6 +66,7 @@
       <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
           <div class="mainflip">
              <div class="frontside">
+                <!-- Do not put styles inline like this. -->
                 <div class="card" style="width:25rem; height:30rem">
                     <img class="card-img-top img- fluid" src="/img/cookies/chocolate-brownies.jpg" alt="card image">
                     <div class="card-body">
@@ -71,6 +76,7 @@
                 </div>
               </div>
               <div class="backside">
+                <!-- Do not put styles inline like this. -->
                 <div class="card" style="width:25rem;  height:30rem">
                   <div class="card-header">
                       <h4 class="card-title">         <%= @chocolate_brownies.price %> </h4>
