--- a/views/muffin.erb
+++ b/views/muffin.erb
@@ -5,6 +5,7 @@
         <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
           <div class="mainflip">
             <div class="frontside">
+              <!-- Do not put styles inline like this. -->
               <div class="card" style="width:25rem; height:30rem"; >
                 <img class="card-img-top img- fluid" src="/img/muffins/banana_muffin.jpeg" alt="card image">
                 <div class="card-body">
@@ -14,6 +15,7 @@
               </div>
             </div>
             <div class="backside">
+              <!-- Do not put styles inline like this. -->
               <div class="card" style="width:25rem; height:30rem;">
                 <div class="card-header">
                   <h4 class="card-title">         <%= @banana_muffin.price %> </h4>
@@ -34,6 +36,7 @@
     <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
       <div class="mainflip">
         <div class="frontside">
+          <!-- Do not put styles inline like this. -->
           <div class="card" style="width:25rem; height:30rem;">
             <img class="card-img-top img- fluid" src="/img/muffins/drak_choklate_muffin.jpg" alt="card image">
             <div class="card-body">
@@ -43,6 +46,7 @@
           </div>
         </div>
         <div class="backside">
+          <!-- Do not put styles inline like this. -->
           <div class="card" style="width:25rem; height:30rem;">
             <div class="card-header">
               <h4 class="card-title">         <%= @chocolate_muffin.price %> </h4>
@@ -63,6 +67,7 @@
     <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
       <div class="mainflip">
         <div class="frontside">
+          <!-- Do not put styles inline like this. -->
           <div class="card" style="width:25rem; height:30rem;">
             <img class="card-img-top img- fluid" src="/img/muffins/strawberry_muffin.jpg" alt="card image">
            <div class="card-body">
@@ -72,6 +77,7 @@
          </div>
        </div>
        <div class="backside">
+        <!-- Do not put styles inline like this. -->
           <div class="card" style="width:25rem; height:30rem;">
             <div class="card-header">
               <h4 class="card-title">         <%= @strawberry_muffin.price %> </h4>
